--- a/index.html
+++ b/index.html
@@ -358,16 +358,18 @@
                                         minlength="2" />
                                 </div>
                                 <div class="footer__input-fild">
-                                    <img src="img/phone-icon.svg" class="footer__form-pic" alt="">
+                                    <img src="img/phone-icon.svg" class="footer__form-pic-2" alt="">
                                     <input type="tel" class="input footer__input phone" placeholder="Ваш телефон" name="phone" required
                                         minlength="18" />
                                 </div>
                             </div>
                             <!-- /.footer__input-group -->
-                            <textarea class="message footer__message" placeholder="Message" name="message"></textarea>
+                            <div class="textarea">
+                                <textarea class="message footer__message" placeholder="Message" name="message"></textarea>
+                            </div>
                             <div class="footer__info footer-item">
                                 <button class="button footer__button" type="submit">Отправить заявку</button>
-                                <span class="footer__info">* Required Fields</span>
+                                
                             </div>
                         </form>
                     </div>
