--- a/index.html
+++ b/index.html
@@ -374,25 +374,33 @@
                         </form>
                     </div>
                     <div class="contact__container_wrapper">
+                        <div class="contact__container_wrapper_data " id="phone">
+                            <h4 class="contact__container_wrapper_data-title">Телефон</h4>
+                            <span class="contact__container_wrapper_data-text"><a class="mailto" href="tel:++7 918 160 78 16">+7 918 160 78 16</a></span>
+                        </div>
                         <div class="contact__container_wrapper_data">
-                            <h4 class="contact__container_wrapper_data-title"></h4>
-                            <span class="contact__container_wrapper_data-text"></span>
+                            <h4 class="contact__container_wrapper_data-title">Почта</h4>
+                            <span class="contact__container_wrapper_data-text"><a class="mailto" href="mailto:chivesonprojects@gmail.com">chivesonprojects@gmail.com</a></span>
                         </div>
                         <div class="contact__container_wrapper_data">
                             <h4 class="contact__container_wrapper_data-title"></h4>
                             <span class="contact__container_wrapper_data-text"></span>
                         </div>
-                        <div class="contact__container_wrapper_data">
-                            <h4 class="contact__container_wrapper_data-title"></h4>
-                            <span class="contact__container_wrapper_data-text"></span>
+                        <div class="contact__container_wrapper_data contact__container_wrapper_data_links ">
+                            <h4 class="contact__container_wrapper_data-title">Соцсети</h4>
+                            <a class="contact__container_wrapper_data-text-link" href="t.me/chiveson" >t.me/chiveson</a>
+                            <a class="contact__container_wrapper_data-text-link" href="https://vk.com/saleeby" >vk.me/saleeby</a>
+                            <a class="contact__container_wrapper_data-text-link" href="https://www.instagram.com/saleeb.y/" >instagram.com/saleeb.y</a>
                         </div>
-                        <div class="contact__container_wrapper_data">
-                            <h4 class="contact__container_wrapper_data-title"></h4>
-                            <span class="contact__container_wrapper_data-text"></span>
-                            <span class="contact__container_wrapper_data-text"></span>
-                            <span class="contact__container_wrapper_data-text"></span>
+                        <div class="contact__container_links">
+                            <a href="vk.com/saleeby"><img src="img/vk.png" alt="" class="header__wrapper_social-link"></a>
+                            <a href=""><img src="img/github.svg" alt="" class="header__wrapper_social-link"></a>
+                        
+                            <a href=""><img src="img/instagram.svg" alt="" class="header__wrapper_social-link"></a>
                         </div>
+                        <!-- /.contact__container_links -->
                     </div>
+                    
                 </div>
                 <!-- /.contact__container -->
             </div>
