--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     Разрабатываю сайты для малого и среднего бизнеса. 
                     У меня можно заказать дизайн и верстку небольшого сайта или интернет-магазина
                 </p>
-                <button class="button main__description_button">Связаться со мной</button>
+                <a class="button-link" href="#contact"><button class="button main__description_button">Связаться со мной</button></a>
             </div>
             <!-- /.main__description -->
             <div class="main__avatar">
@@ -344,7 +344,7 @@
     <footer class="footer">
         <section class="contact">
             <div class="container">
-                <h2 class="section-title">Свяжитесь со мной</h2>
+                <h2 class="section-title"><a name="contact"></a> Свяжитесь со мной</h2>
                 <div class="contact__container">
                     <div class="contact__container_form">
                         <p class="contact__container_form-title">
